add followers and leader api endpoints
